--- a/src/app/utulisateur/components/one-user/one-user.component.scss
+++ b/src/app/utulisateur/components/one-user/one-user.component.scss
@@ -1,6 +1,6 @@
 .card{
     min-width: 200px;
-    height: 220px;
+    min-height: 220px;
     display: flex;
     align-items: center;
     justify-content: center;
