--- a/src/app/utulisateur/components/utulisateur/utulisateur.component.scss
+++ b/src/app/utulisateur/components/utulisateur/utulisateur.component.scss
@@ -2,7 +2,7 @@ section{
     min-height: 100vh;
     width: 100%;
     padding-top: 120px;
-    display: flex;
+    display: inline-table;
     align-items: center;
     justify-content: space-around;
 }
