--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -7,6 +7,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 100;
     a{
         text-decoration: none;
         color: white;
