--- a/src/app/utulisateur/components/utulisateur/utulisateur.component.html
+++ b/src/app/utulisateur/components/utulisateur/utulisateur.component.html
@@ -1,3 +1,3 @@
 <section>
-    <app-one-user *ngFor="let user of users" [user]="user"></app-one-user>
+    <app-one-user *ngFor="let user of users | async" [user]="user"></app-one-user>
 </section>
