--- a/src/app/utulisateur/components/one-user/one-user.component.html
+++ b/src/app/utulisateur/components/one-user/one-user.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card mx-4 mb-4">
     <img src="{{user.picture.large}}" alt="{{user.picture.thumbnail}}">
     <p>nom: {{user.name.first}}</p>
     <p>prenom: {{user.name.last}}</p>
